fix/active tab visibility fix

--- a/app/components/Tab/tab.css
+++ b/app/components/Tab/tab.css
@@ -16,4 +16,5 @@
 {
     visibility: visible;
     composes: tab;
+    z-index: 1;
 }
